--- a/src/app/Shared/menu/menu.component.html
+++ b/src/app/Shared/menu/menu.component.html
@@ -1,20 +1,26 @@
+   <nav class="sidebar d-flex flex-column align-items-center">
+      <button class="btn btn-light mb-3">
+          <i class="bi bi-list fs-3"></i>
+      </button>
 
+      <div class="nav-item">
+          <a href="#">
+              <i class="bi bi-star text-primary"></i>
+              <span>Gestión de Usuarios</span>
+          </a>
+      </div>
 
+      <div class="nav-item">
+          <a href="#">
+              <i class="bi bi-star text-primary"></i>
+              <span>Gestión de Tareas</span>
+          </a>
+      </div>
 
-
-<nav class="navbar container navbar-expand-lg navbar-expand-md navbar-expand-sm  navbar-expand-xl  "  style="background-color: #6edff6;">
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active"  routerLink="/" aria-current="page" >Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/create"  href="#">Crear</a>
-        </li>
-
-
-      </ul>
-    </div>
-  </div>
-</nav>
+      <div class="nav-item">
+          <a href="#">
+              <i class="bi bi-star text-primary"></i>
+              <span>Contacto</span>
+          </a>
+      </div>
+  </nav>
