--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,14 @@
-<app-menu></app-menu>
-<br>
 
 
 
-<div class="container">
-  <app-list (event)="UpdataLista()"></app-list>
+<div class="d-flex">
+  <!-- Menú lateral -->
+  <app-menu></app-menu>
+
+  <!-- Contenido Principal -->
+  <div class="p-4">
+    <app-list (event)="UpdataLista()"   (eventAsignacion)="UpdateAsignacionTareas()" ></app-list>
+  </div>
 </div>
+
+
