feat:  se implementa la modificacion de la tarea y la asignacion

--- a/src/app/tareas/list/list.component.html
+++ b/src/app/tareas/list/list.component.html
@@ -6,7 +6,7 @@
       <div class="banner-overlay"></div>
       <div class="banner-content">
         <h2 class="fw-bold">Tareas</h2>
-        <a href="#" class="btn btn-light mt-2">
+        <a [routerLink]="['/tarea/create']" routerLinkActive="router-link-active"  class="btn btn-light mt-2">
           <i class="bi bi-calendar-plus text-primary"></i> Nueva Tarea
         </a>
       </div>
