--- a/src/app/Shared/menu/menu.component.html
+++ b/src/app/Shared/menu/menu.component.html
@@ -4,14 +4,14 @@
       </button>
 
       <div class="nav-item">
-          <a href="#">
+          <a  [routerLink]="['/usuario/usuarios']">
               <i class="bi bi-star text-primary"></i>
               <span>Gestión de Usuarios</span>
           </a>
       </div>
 
       <div class="nav-item">
-          <a href="#">
+          <a [routerLink]="['/home']" routerLinkActive="router-link-active" >
               <i class="bi bi-star text-primary"></i>
               <span>Gestión de Tareas</span>
           </a>
@@ -23,4 +23,12 @@
               <span>Contacto</span>
           </a>
       </div>
+
+
+      <div class="nav-item">
+        <a (click)="CerrarSesion()">
+            <i class="bi bi-star text-primary"></i>
+            <span>Cerrar Sesion</span>
+        </a>
+    </div>
   </nav>
