--- a/src/app/tareas/asignar-tarea-edit/tarea-edit.component.html
+++ b/src/app/tareas/asignar-tarea-edit/tarea-edit.component.html
@@ -5,22 +5,30 @@
   <!-- Contenido Principal -->
   <div class="p-4">
 
-    <h2>Tareas</h2>
+
+    <div class="fondoTitulos">
+      <h2>Editar Tareas</h2>
+
+    </div>
+    <br>
+    <br>
+
+    <div class="mt-5"></div>
     <div class="col-lg-7 col-md-8 col-ms-8">
       <div *ngIf="loading" class="alert alert-success" role="alert">
         {{message}}
       </div>
     </div>
 
-    <form (submit)="sendForm()" [formGroup]="fg" >
+    <form (submit)="sendForm()" [formGroup]="fg">
 
       <div class="row mt-2">
         <div class="col-lg-1 col-md-1 col-ms-1"></div>
         <div class="col-lg-10 col-md-10 col-ms-10  border-bottom border-black">
-          <input type="text" formControlName="NameTarea" class="form-control-plaintext text-dark"  />
+          <input type="text" formControlName="NameTarea" class="form-control-plaintext text-dark" />
         </div>
         <div *ngIf="fg.get('NameTarea')?.invalid && fg.get('NameTarea')?.touched" class="colorRed">
-          El nombre de  la tarea es obligatorio.
+          El nombre de la tarea es obligatorio.
         </div>
         <div class="col-lg-1 col-md-1 col-ms-1"></div>
       </div>
@@ -28,21 +36,22 @@
       <div class="row mt-2 ">
         <div class="col-lg-1 col-md-1 col-ms-1"></div>
         <div class="col-lg-10 col-md-10 col-ms-10 border-bottom border-black">
-          <textarea    formControlName="DescriptionTarea" class="form-control-plaintext text-dark"  ></textarea>
+          <textarea formControlName="DescriptionTarea" class="form-control-plaintext text-dark"></textarea>
         </div>
         <div class="col-lg-1 col-md-1 col-ms-1"></div>
       </div>
-<br>
+      <br>
 
 
       <div class="row mt-2">
         <div class="col-lg-1 col-md-1 col-ms-1"></div>
         <div class="col-lg-10 col-md-10 col-ms-10 border-bottom border-black">
 
-          <select formControlName="Usuario"   class="form-select form-control-plaintext" aria-label="Default select example">
-            <option selected  value="">Seleccione un usuario</option>
+          <select formControlName="Usuario" class="form-select form-control-plaintext"
+            aria-label="Default select example">
+            <option selected value="">Seleccione un usuario</option>
             @for(item of usuarios; track $index) {
-              <option value="{{item.Id}}">{{item.NameUsuario}}</option>
+            <option value="{{item.Id}}">{{item.NameUsuario}}</option>
             }
           </select>
 
@@ -62,9 +71,8 @@
 
     </form>
 
-
-
   </div>
+
+
 </div>
 <app-loadding></app-loadding>
-
