--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @use "bootstrap/scss/bootstrap";
 @use "bootstrap-icons/font/bootstrap-icons.css";
 
-.colorRed{
+.colorRed {
   color: red;
 }
 
@@ -78,4 +78,16 @@
 /* Mostrar texto cuando el sidebar se expande */
 .sidebar:hover .nav-item span {
   opacity: 1;
+}
+
+
+.fondoTitulos {
+  background-color: #fcf7ff;
+  position: absolute;
+  height: 5%;
+  width: 100%;
+  margin-bottom: 2vw;
+  padding-bottom: 1vw;
+  padding-left: 1vw;
+  padding-top: 1vw;
 }
