feat: se termina de implementar el front para el usuario no administrador

--- a/src/app/Shared/loadding/loadding.component.html
+++ b/src/app/Shared/loadding/loadding.component.html
@@ -15,7 +15,7 @@
 
     } @else {
 
-    <img src="../../../img/loadding.webp" class="imgloadding" height="250" width="250" alt="loadding">
+    <img src="./img/loadding.webp" class="imgloadding" height="250" width="250" alt="loadding">
 
     }
   </div>
