--- a/src/app/Shared/menu/menu.component.html
+++ b/src/app/Shared/menu/menu.component.html
@@ -3,12 +3,16 @@
           <i class="bi bi-list fs-3"></i>
       </button>
 
-      <div class="nav-item">
+      @if (idRol==1) {
+        <div class="nav-item">
           <a  [routerLink]="['/usuario/usuarios']">
               <i class="bi bi-star text-primary"></i>
               <span>Gestión de Usuarios</span>
           </a>
       </div>
+
+      }
+
 
       <div class="nav-item">
           <a [routerLink]="['/home']" routerLinkActive="router-link-active" >
@@ -18,7 +22,7 @@
       </div>
 
       <div class="nav-item">
-          <a href="#">
+          <a [routerLink]="['/contacto/contactos']">
               <i class="bi bi-star text-primary"></i>
               <span>Contacto</span>
           </a>
