--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
           <div class="row">
             <div class="col-lg-3 col-md-2 col-ms-2  "></div>
             <div class="col-lg-7 col-md-8 col-ms-8">
-              <img src="../../../img/logo.webp" class="img-fluid rounded-4 " width="360" alt="">
+              <img src="./img/logo.webp" class="img-fluid rounded-4 " width="360" alt="">
             </div>
             <div class="col-lg-3 col-md-2 col-ms-2"></div>
           </div>
