--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 
 .spinner-container {
   position: absolute;
-  height: 100%;
+  height: 40%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -32,7 +32,7 @@
 
 .sidebar {
   width: 80px;
-  height: 100vh;
+  height: 147vh;
   background: #fcf7ff;
   border-right: 2px solid #ddd;
   padding-top: 20px;
@@ -90,4 +90,13 @@
   padding-bottom: 1vw;
   padding-left: 1vw;
   padding-top: 1vw;
+}
+
+
+.user-list-container {
+  max-height: 60%; /* Ajusta la altura según necesites */
+  overflow-y: auto; /* Agrega scroll vertical cuando sea necesario */
+
+  padding: 10px;
+
 }
